--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
       </div>
     </header>
-    <div
+    <div class="wrapper">
       <section id="featured-property">
         <figure>
           <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
@@ -45,7 +45,7 @@
         <h3>Company News</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
       </section>
-    
+    </div>
     
     <section id="details">
       <div>
